--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-updates": "^0.4.2",
+    "firebase": "^8.3.1",
     "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-native": "0.63.3",
